Upgrade to java11