@@ -10,11 +10,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
-    annotationProcessor 'org.projectlombok:lombok:1.18.12'
-    // JDI
-    compile files("${System.getProperty('java.home')}/../lib/tools.jar")
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
 }
 
 
@@ -29,3 +27,20 @@ compileTestJava {
     // Show parameter names
     options.compilerArgs << "-parameters"
 }
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=recorder4j.main',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=recorder4j.main',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=recorder4j.main',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=recorder4j.main',
+                '--add-exports', 'jdk.jdi/com.sun.tools.jdi=recorder4j.main'
+        ]
+    }
+}
+java {
+    modularity.inferModulePath.set(true)
+}
+
+sourceCompatibility = 11
